cmake_minimum_required(VERSION 3.10)
project(sword2offer_cpp)

set(CMAKE_CXX_STANDARD 11)

add_executable(MovingCount MovingCount.cpp)
add_executable(ReverseList ReverseList.cpp)
add_executable(Convert Convert.cpp)
add_executable(Match Match.cpp)
add_executable(Recursion Recursion.cpp)
add_executable(ReConstructBinaryTree ReConstructBinaryTree.cpp)